# soundy

./: *new snippet*  *new snippet*~  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  TestAudio.cpp  TestAudio.cpp~  TestColorTracker.cpp  TestColorTracker.cpp~  TestDebug.cpp~  app.cpp  app.cpp~  app.h  app.h~  audio.cpp  audio.cpp~  audio.h  audio.h~  colortracker.cpp  colortracker.cpp~  colortracker.h  colortracker.h~  config.h  config.h~  configimp.cpp  configimp.cpp~  configuration.cpp  configuration.cpp~  configuration.h  configuration.h~  configwindow.cpp  configwindow.cpp~  configwindow.h  configwindow.h~  debug.h~  mainwindow.cpp  mainwindow.cpp~  mainwindow.h  mainwindow.h~  (+8 more)
cmake/Modules/: FindLibConfig.cmake
